unpackaged/main/default/objects/Account/fields/No_of_EDI_Enrollment_Feeds__c.field-meta.xml
<CustomField>
    <fullName>No_of_EDI_Enrollment_Feeds__c</fullName>
    <label>No of EDI Enrollment Feeds</label>
    <summaryFilterItems>
        <field>Group__c.EDI_Enrollment_Feeds__c</field>
        <operation>contains</operation>
        <value>Yes - Not Prereduced,Yes - Reduced, In Progress</value>
    </summaryFilterItems>
    <summaryForeignKey>Group__c.Master_Group__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>