unpackaged/main/default/objects/Account/fields/Open_Enrollment__c.field-meta.xml
<CustomField>
    <fullName>Open_Enrollment__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Account Has Open Enrollment</description>
    <inlineHelpText>Account Has Open Enrollment</inlineHelpText>
    <label>Open Enrollment</label>
    <type>Checkbox</type>
</CustomField>