unpackaged/main/default/objects/Account/fields/Opportunity_Batch_Industry__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Batch_Industry__c</fullName>
    <description>Used in batch that automatically creates opportunities. For AR, opp is created for all School Districts, even if they do not have Medical.</description>
    <label>Opportunity Batch Industry</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>School District</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>