unpackaged/main/default/objects/Account/fields/Policy__c.field-meta.xml
<CustomField>
    <fullName>Policy__c</fullName>
    <formula>Group_Policy_num__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Policy#</label>
    <type>Text</type>
</CustomField>