unpackaged/main/default/objects/Account/fields/Previous_LSV_Business__c.field-meta.xml
<CustomField>
    <fullName>Previous_LSV_Business__c</fullName>
    <description>This is to store the last LSV Business value before the Master Group is terminated</description>
    <inlineHelpText>Last LSV Business value before the Master Group is terminated</inlineHelpText>
    <label>Previous LSV Business</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Ancillary Only</fullName>
            </value>
            <value>
                <fullName>Medical Only</fullName>
            </value>
            <value>
                <fullName>Medical and Ancillary</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>