unpackaged/main/default/objects/Account/fields/Primary_Agency_Name__c.field-meta.xml
<CustomField>
    <fullName>Primary_Agency_Name__c</fullName>
    <description>This field will be used on Opportunity Quick Close grid. It will be labelled as Broker Agency.</description>
    <formula>Sales_Primary_Agency__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Primary Agency Name</label>
    <type>Text</type>
</CustomField>