unpackaged/main/default/objects/Account/fields/Primary_BCBS_Number__c.field-meta.xml
<CustomField>
    <fullName>Primary_BCBS_Number__c</fullName>
    <description>Primary BCBS Group ID</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Primary BCBS Number</label>
    <length>20</length>
    <type>Text</type>
</CustomField>