unpackaged/main/default/objects/Account/fields/Reset_Account_Team__c.field-meta.xml
<CustomField>
    <fullName>Reset_Account_Team__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Reset Account Team</label>
    <type>Checkbox</type>
</CustomField>