unpackaged/main/default/objects/Account/fields/Risk_Last_Updated__c.field-meta.xml
<CustomField>
    <fullName>Risk_Last_Updated__c</fullName>
    <description>Field on Account object to show the last date of the PM score update (SOW 8 CR BRD reference: OR002-02)</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Risk Last Updated</label>
    <type>Date</type>
</CustomField>