unpackaged/main/default/objects/Account/fields/Run_Opp_Batch__c.field-meta.xml
<CustomField>
    <fullName>Run_Opp_Batch__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used in batch that automatically creates opportunities.</description>
    <label>Create Opportunity?</label>
    <type>Checkbox</type>
</CustomField>