unpackaged/main/default/objects/Account/fields/Sales_Primary_Agency__c.field-meta.xml
<CustomField>
    <fullName>Sales_Primary_Agency__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>If Master Group has Medical then it will be medical agency else it will be life/dental agency.</inlineHelpText>
    <label>Primary Agency</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.RecordType.Name</field>
            <operation>equals</operation>
            <value>Agency</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Accounts (Sales Primary Agency)</relationshipLabel>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>