unpackaged/main/default/objects/Account/fields/Sales_Updated_Blue_Rep__c.field-meta.xml
<CustomField>
    <fullName>Sales_Updated_Blue_Rep__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field is being used in Blue Rep update functionality.</description>
    <label>Sales Updated Blue Rep?</label>
    <type>Checkbox</type>
</CustomField>