unpackaged/main/default/objects/Account/fields/Secondary_BCBS_Number__c.field-meta.xml
<CustomField>
    <fullName>Secondary_BCBS_Number__c</fullName>
    <description>Secondary BCBS Group ID</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Secondary BCBS Number</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>