unpackaged/main/default/objects/Account/fields/Service_Flag__c.field-meta.xml
<CustomField>
    <fullName>Service_Flag__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field contains Key Account information</description>
    <label>Service Flag</label>
    <type>Checkbox</type>
</CustomField>