unpackaged/main/default/objects/Account/fields/Service_Master_Agency__c.field-meta.xml
<CustomField>
    <fullName>Service_Master_Agency__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Service Master Agency</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Accounts (Service Master Agency)</relationshipLabel>
    <relationshipName>Accounts1</relationshipName>
    <type>Lookup</type>
</CustomField>