unpackaged/main/default/objects/Account/fields/Service_Reason__c.field-meta.xml
<CustomField>
    <fullName>Service_Reason__c</fullName>
    <description>This field contains Service Reason information</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Service Reason</label>
    <type>TextArea</type>
</CustomField>