unpackaged/main/default/objects/Account/fields/Small_Group_Flag__c.field-meta.xml
<CustomField>
    <fullName>Small_Group_Flag__c</fullName>
    <description>Field pulled from admin system Compass that reflect groups that have a type of small group product(s)</description>
    <inlineHelpText>Identifies that a group has small group products.</inlineHelpText>
    <label>Small Group Flag</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>SGPL20</fullName>
            </value>
            <value>
                <fullName>SGP10</fullName>
            </value>
            <value>
                <fullName>SGP15</fullName>
            </value>
            <value>
                <fullName>SGP20</fullName>
            </value>
            <value>
                <fullName>SGP25</fullName>
            </value>
            <value>
                <fullName>SGP35</fullName>
            </value>
            <value>
                <fullName>SGGEN2</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>