unpackaged/main/default/objects/Account/fields/SocialSecurityExempt__c.field-meta.xml
<CustomField>
    <fullName>SocialSecurityExempt__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Social Security Exempt</label>
    <type>Checkbox</type>
</CustomField>