unpackaged/main/default/objects/Account/fields/Tax_Id__c.field-meta.xml
<CustomField>
    <fullName>Tax_Id__c</fullName>
    <description>This field contains Tax Id information</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Tax Id</label>
    <length>11</length>
    <type>Text</type>
</CustomField>