unpackaged/main/default/objects/Account/fields/Top_Groups_less500K__c.field-meta.xml
<CustomField>
    <fullName>Top_Groups_less500K__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Field used by regional service manager and team to report on and track activity of top 100 accounts</description>
    <inlineHelpText>Identified groups less than $500k in annualized premium</inlineHelpText>
    <label>Top Groups Less than $500K</label>
    <type>Checkbox</type>
</CustomField>