unpackaged/main/default/objects/Account/fields/Update_Record_Tectonic__c.field-meta.xml
<CustomField>
    <fullName>Update_Record_Tectonic__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Temporary field used to indicate which records need to be updated for a mass update (used to fix data ad hoc)</description>
    <label>Update Record Tectonic</label>
    <type>Checkbox</type>
</CustomField>