unpackaged/main/default/objects/Account/recordTypes/Consortium.recordType-meta.xml
<RecordType>
    <fullName>Consortium</fullName>
    <active>true</active>
    <description>Florida Consortium Accounts</description>
    <label>Consortium</label>
</RecordType>