unpackaged/main/default/objects/Account/recordTypes/Master_Group.recordType-meta.xml
<RecordType>
    <fullName>Master_Group</fullName>
    <active>true</active>
    <description>Master Group Records</description>
    <label>Master Group</label>
</RecordType>