unpackaged/main/default/objects/Account/validationRules/AC002_AR_User_Edit_AR_Records.validationRule-meta.xml
<ValidationRule>
    <fullName>AC002_AR_User_Edit_AR_Records</fullName>
    <active>true</active>
    <errorConditionFormula>AR__c = true &amp;&amp;  
NOT(INCLUDES($User.Region__c, &#39;AR&#39;) ) &amp;&amp; 
OR(
$Profile.Name = &#39;USAble Standard Sales User&#39;,
$Profile.Name == &#39;USAble Standard Dental Underwriting&#39;) &amp;&amp;
RecordType.Name = &#39;Prospect&#39;</errorConditionFormula>
    <errorMessage>AC002 Only Arkansas Users can edit Arkansas prospects.</errorMessage>
</ValidationRule>