unpackaged/main/default/objects/Account/validationRules/AC004_Ensure_Sales_Profile_Update_right.validationRule-meta.xml
<ValidationRule>
    <fullName>AC004_Ensure_Sales_Profile_Update_right</fullName>
    <active>true</active>
    <description>This validation rule makes sure sales profile is not allowed to update Account name or owner</description>
    <errorConditionFormula>AND(
	OR(
		PRIORVALUE( Name ) &lt;&gt; Name,
		PRIORVALUE( OwnerId ) &lt;&gt; OwnerId
		),
	$Profile.Name = &#39;USAble Standard Sales User&#39;,
         NOT(RecordType.DeveloperName = &#39;Prospect&#39; )
	)</errorConditionFormula>
    <errorMessage>AC004 Account Name and Account owner cannot be changed.</errorMessage>
</ValidationRule>