unpackaged/main/default/objects/Account/validationRules/AC005_FL_User_Edit_FL_Records.validationRule-meta.xml
<ValidationRule>
    <fullName>AC005_FL_User_Edit_FL_Records</fullName>
    <active>true</active>
    <errorConditionFormula>FL__c = true &amp;&amp;  
NOT(INCLUDES($User.Region__c, &#39;FL&#39;) ) &amp;&amp; 
OR(
$Profile.Name = &#39;USAble Standard Sales User&#39;,
$Profile.Name == &#39;USAble Standard Dental Underwriting&#39;) &amp;&amp;
RecordType.Name = &#39;Prospect&#39;</errorConditionFormula>
    <errorMessage>AC005 Only Florida users can edit Florida prospects.</errorMessage>
</ValidationRule>