unpackaged/main/default/objects/Account/validationRules/AC006_HI_User_Edit_HI_Records.validationRule-meta.xml
<ValidationRule>
    <fullName>AC006_HI_User_Edit_HI_Records</fullName>
    <active>true</active>
    <errorConditionFormula>HI__c = true &amp;&amp;  
NOT(INCLUDES($User.Region__c, &#39;HI&#39;) ) &amp;&amp; 
OR(
$Profile.Name = &#39;USAble Standard Sales User&#39;,
$Profile.Name == &#39;USAble Standard Dental Underwriting&#39;) &amp;&amp;
RecordType.Name = &#39;Prospect&#39;</errorConditionFormula>
    <errorMessage>AC006 Only Hawaii users can change Hawaii prospects.</errorMessage>
</ValidationRule>