unpackaged/main/default/objects/Account/validationRules/AC007_Prospect_City_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>AC007_Prospect_City_Validation</fullName>
    <active>true</active>
    <description>The purpose of this validation rule is to make city field required for the user while creating a prospect account.</description>
    <errorConditionFormula>AND( RecordType.DeveloperName = &#39;Prospect&#39;, ISBLANK(BillingCity))</errorConditionFormula>
    <errorDisplayField>BillingCity</errorDisplayField>
    <errorMessage>AC007 Please enter Billing City.</errorMessage>
</ValidationRule>