unpackaged/main/default/objects/Account/validationRules/AC008_Prospect_Partner_Must_be_BCBS_FL.validationRule-meta.xml
<ValidationRule>
    <fullName>AC008_Prospect_Partner_Must_be_BCBS_FL</fullName>
    <active>true</active>
    <description>For Florida Sales Users, Partner must be BCBS of Florida.</description>
    <errorConditionFormula>RecordType.DeveloperName = &#39;Prospect&#39; &amp;&amp;   
Partner__r.Name   &lt;&gt; &quot;Blue Cross Blue Shield of Florida&quot; &amp;&amp;
INCLUDES($User.Region__c , &#39;FL&#39;) &amp;&amp;  
 $Profile.Name = &#39;USAble Standard Sales User&#39; /*USAble Standard Sales User*/
&amp;&amp;
$UserRole.Name &lt;&gt; &#39;Sales Ops&#39;
&amp;&amp;
$UserRole.Name &lt;&gt; &#39;SVP Sales&#39;</errorConditionFormula>
    <errorDisplayField>Partner__c</errorDisplayField>
    <errorMessage>AC008 Partner must be Blue Cross Blue Shield of Florida</errorMessage>
</ValidationRule>