unpackaged/main/default/objects/Account/validationRules/AC009_Prospect_State_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>AC009_Prospect_State_Validation</fullName>
    <active>true</active>
    <description>The purpose of this validation rule is to make state field required for the user while creating a prospect account.</description>
    <errorConditionFormula>AND( RecordType.DeveloperName = &#39;Prospect&#39;,    ISBLANK(BillingState)  )</errorConditionFormula>
    <errorDisplayField>BillingState</errorDisplayField>
    <errorMessage>AC009 Please enter Billing State.</errorMessage>
</ValidationRule>