unpackaged/main/default/objects/Account/validationRules/AC013_Prospect_Agency_must_be_Branch.validationRule-meta.xml
<ValidationRule>
    <fullName>AC013_Prospect_Agency_must_be_Branch</fullName>
    <active>true</active>
    <description>On Prospect Require that primary agency is a branch agency</description>
    <errorConditionFormula>RecordType.DeveloperName = &#39;Prospect&#39; &amp;&amp;  Sales_Primary_Agency__r.Master_Agency_Record__c == true</errorConditionFormula>
    <errorDisplayField>Sales_Primary_Agency__c</errorDisplayField>
    <errorMessage>AC013 Please select the Branch Agency.</errorMessage>
</ValidationRule>