unpackaged/main/default/objects/Account/validationRules/AC014_Prospect_Partner_Must_be_BCBS_AR.validationRule-meta.xml
<ValidationRule>
    <fullName>AC014_Prospect_Partner_Must_be_BCBS_AR</fullName>
    <active>true</active>
    <description>For Arkansas Sales Users, Partner must be Arkansas BCBS.</description>
    <errorConditionFormula>RecordType.DeveloperName = &#39;Prospect&#39; 
&amp;&amp;   
(
     (Partner__r.Name   &lt;&gt; &quot;Arkansas Blue Cross and Blue Shield&quot; 
      &amp;&amp;
      INCLUDES($User.Region__c , &#39;AR&#39;))
) 
&amp;&amp;  
$Profile.Name = &#39;USAble Standard Sales User&#39;
&amp;&amp;
$UserRole.Name &lt;&gt; &#39;Sales Ops&#39;
&amp;&amp;
$UserRole.Name &lt;&gt; &#39;SVP Sales&#39;</errorConditionFormula>
    <errorDisplayField>Partner__c</errorDisplayField>
    <errorMessage>AC014 Partner must be Arkansas Blue Cross and Blue Shield</errorMessage>
</ValidationRule>