unpackaged/main/default/objects/Account/validationRules/AC015_Prospect_Partner_Must_be_BCBS_HI.validationRule-meta.xml
<ValidationRule>
    <fullName>AC015_Prospect_Partner_Must_be_BCBS_HI</fullName>
    <active>true</active>
    <description>For Hawaii Sales Users, Partner must be Hawaii Medical Service Association</description>
    <errorConditionFormula>RecordType.DeveloperName = &#39;Prospect&#39; 
&amp;&amp;   
(
     (Partner__r.Name   &lt;&gt; &quot;Hawaii Medical Service Association&quot; 
      &amp;&amp;
      INCLUDES($User.Region__c , &#39;HI&#39;))
) 
&amp;&amp;  
$Profile.Name = &#39;USAble Standard Sales User&#39;
&amp;&amp;
$UserRole.Name &lt;&gt; &#39;Sales Ops&#39;
&amp;&amp;
$UserRole.Name &lt;&gt; &#39;SVP Sales&#39;</errorConditionFormula>
    <errorDisplayField>Partner__c</errorDisplayField>
    <errorMessage>AC015 Partner must be Hawaii Medical Service Association</errorMessage>
</ValidationRule>