unpackaged/main/default/objects/Account/validationRules/AC016_Opp_prohibited_OutOfRegion.validationRule-meta.xml
<ValidationRule>
    <fullName>AC016_Opp_prohibited_OutOfRegion</fullName>
    <active>true</active>
    <description>Sales users cannot create opportunities outside their region. This validation rule is to handle the  New Cross Sell Opportunity action.</description>
    <errorConditionFormula>AND(
   $Profile.Name == &#39;USAble Standard Sales User&#39;,  NOT($UserRole.Name == &#39;RFP Analyst&#39;),  
   OR ( 
      RecordType.Name == &#39;Master Group&#39;, 
      RecordType.Name == &#39;Prospect&#39; 
      ), 
   Run_Opp_Batch__c = TRUE,
   NOT( 
      OR( 
         ( FL__c &amp;&amp; INCLUDES($User.Region__c, &#39;FL&#39;)), 
         ( AR__c &amp;&amp; INCLUDES($User.Region__c, &#39;AR&#39;)), 
         ( HI__c &amp;&amp; INCLUDES($User.Region__c, &#39;HI&#39;)), 
         ( RG__c &amp;&amp; INCLUDES($User.Region__c, &#39;RG&#39;)), 
         (FL__c &amp;&amp; AR__c &amp;&amp; HI__c &amp;&amp; RG__c) 
         ) 
      ) 
   )</errorConditionFormula>
    <errorMessage>AC016 You are not allowed to create an opportunity for an account outside of your region.</errorMessage>
</ValidationRule>