unpackaged/main/default/objects/Account/validationRules/AC017_Billing_St_should_be_a_valid_US.validationRule-meta.xml
<ValidationRule>
    <fullName>AC017_Billing_St_should_be_a_valid_US</fullName>
    <active>true</active>
    <description>Billing State Code should be a valid US State Code</description>
    <errorConditionFormula>AND(!ISBLANK(BillingState),
AND (NOT($Profile.Name = &#39;API&#39; )),  
AND (RecordType.DeveloperName = &#39;Prospect&#39;), 
OR ( 
LEN(BillingState) &lt;&gt; 2, 
NOT( 
CONTAINS(&quot;AL:AK:AZ:AR:CA:CO:CT:DE:DC:FL:GA:HI:ID:IL:IN:IA:KS:KY:LA:ME:MD:MA:MI:MN:MS:MO:MT:NE:NV:NH:NJ:NM:NY:NC:ND:OH:OK:OR:PA:RI:SC:SD:TN:TX:UT:VT:VA:WA:WV:WI:WY:AS:GU:MP:PR:VI:AA:AE:AP&quot;,  BillingState) 
)
))</errorConditionFormula>
    <errorDisplayField>BillingState</errorDisplayField>
    <errorMessage>AC017 Please enter a valid US state code in caps</errorMessage>
</ValidationRule>