unpackaged/main/default/objects/Account/validationRules/AC020_RG_User_Edit_RG_Records.validationRule-meta.xml
<ValidationRule>
    <fullName>AC020_RG_User_Edit_RG_Records</fullName>
    <active>true</active>
    <errorConditionFormula>RG__c = true &amp;&amp;  
NOT(INCLUDES($User.Region__c, &#39;RG&#39;) ) &amp;&amp; 
OR(
$Profile.Name = &#39;USAble Standard Sales User&#39;,
$Profile.Name == &#39;USAble Standard Dental Underwriting&#39;) &amp;&amp;
RecordType.Name = &#39;Prospect&#39;</errorConditionFormula>
    <errorMessage>AC020 Only Regence Users can edit Regence prospects.</errorMessage>
</ValidationRule>