unpackaged/main/default/objects/Account/listViews/Account_Manager_Accounts.listView-meta.xml
<ListView>
    <fullName>Account_Manager_Accounts</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>Blue_Rep_Name__c</columns>
    <columns>Group_Size__c</columns>
    <columns>LSV_Business__c</columns>
    <columns>ACCOUNT.ADDRESS1_CITY</columns>
    <columns>ACCOUNT.TYPE</columns>
    <filterScope>Team</filterScope>
    <label>Account Manager Accounts</label>
    <sharedTo>
        <group>All_Account_Management</group>
    </sharedTo>
</ListView>