unpackaged/main/default/objects/Account/listViews/Active_Master_Groups_Open_Enrollment.listView-meta.xml
<ListView>
    <fullName>Active_Master_Groups_Open_Enrollment</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>ACCOUNT.ADDRESS1_STREET</columns>
    <columns>ACCOUNT.ADDRESS1_CITY</columns>
    <columns>ACCOUNT.ADDRESS1_STATE</columns>
    <columns>Partner__c</columns>
    <columns>ACCOUNT.PHONE1</columns>
    <columns>ACCOUNT.TYPE</columns>
    <columns>Group_Anniversary_Date__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Open_Enrollment__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>ACCOUNT.TYPE</field>
        <operation>equals</operation>
        <value>Master Group</value>
    </filters>
    <label>Active Master Groups / Open Enrollment</label>
    <sharedTo>
        <group>All_Account_Management</group>
        <group>All_Users_Except_Acct_Mgmt</group>
    </sharedTo>
</ListView>