unpackaged/main/default/objects/Account/listViews/Agencies_AR.listView-meta.xml
<ListView>
    <fullName>Agencies_AR</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>Agency_Code__c</columns>
    <columns>ACCOUNT.ADDRESS1_CITY</columns>
    <columns>ACCOUNT.PHONE1</columns>
    <columns>ACCOUNT.TYPE</columns>
    <columns>ACCOUNT.CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>AR__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>Master_Agency_Record__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <filters>
        <field>ACCOUNT.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Account.Agency</value>
    </filters>
    <label>Agencies - AR</label>
    <sharedTo>
        <group>All_Arkansas_Sales</group>
        <group>Junior_Admin_Group</group>
    </sharedTo>
</ListView>